Change the path of linked js and css files in head

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
         <title>A Sailor, A Cook</title>
-        <link href="./style.css" type="text/css" rel="stylesheet">
-        <script src="main.js" defer></script>
+        <link href="styles/style.css" type="text/css" rel="stylesheet">
+        <script src="js/main.js" defer></script>
     </head>
     <body>
 
