--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
     <!--Head section. Title, links to css and javascript-->
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
         <title>A Sailor, A Cook</title>
-        <link href="styles/style.css" type="text/css" rel="stylesheet">
-        <script src="js/main.js" defer></script>
+        <link href="./styles/style.css" type="text/css" rel="stylesheet">
+        <script src="./js/main.js" defer></script>
     </head>
     <body>
 
@@ -23,7 +24,7 @@
             <div id="one-content" class="tabcontent">
                 <span id="part-one-title">A Film</span>
                 <video id="video" width="1920" height="1440" controls>
-                    <source src="./Barbs Short 480.mp4" type="video/MP4">
+                    <source src="../assets/videos/Barbs Short 480.mp4" type="video/MP4">
                   Your browser does not support the video tag.
                 </video>
                 <br>
@@ -40,8 +41,7 @@
                 <div id="part-two-content">
                 
                 <div class="art-container" id="painting-container">
-                    <img id="painting" src="./A SAILOR A COOK/Artwork/Joe G Painting 1.jpeg">
-
+                    <img id="painting" src="./assets/images/Joe G Painting 1.jpeg">
                 </div>
 
                 <div class="art-container" id="bridge-container">
@@ -53,7 +53,7 @@
                     <h3 id="stop-bridge" class="controls" onclick= "document.getElementById('audio-bridge').currentTime = 0;document.getElementById('audio-bridge').pause()">Stop</h3>
 
                     <audio id="audio-bridge" class="audio" ontimeupdate="updateTime('audio-bridge', 'time-bridge')">
-                        <source src="./A SAILOR A COOK/Music/By The Bridge.wav" type="audio/wav">
+                        <source src="./assets/audio/By The Bridge.wav" type="audio/wav">
                         Your browser does not support the audio element.
                     </audio>
                 </div>
@@ -80,7 +80,7 @@
                     <h3 id="stop-levert" class="controls" onclick= "document.getElementById('audio-levert').currentTime = 0;document.getElementById('audio-levert').pause()">Stop</h3>
                     
                     <audio id="audio-levert" class="audio" ontimeupdate="updateTime('audio-levert', 'time-levert')">
-                    <source src="./A SAILOR A COOK/Music/Le-Vert.mp3" type="audio/mp3">
+                    <source src="./assets/audio/Le-Vert.mp3" type="audio/mp3">
                 Your browser does not support the audio element.
                     </audio>
                 </div>
@@ -89,20 +89,20 @@
 
                 <div id="slideshow"> 
 
-                <img class="slides" id="slide1" src="./A SAILOR A COOK/Photography/_17_01906.jpg">
-                <img class="slides" id="slide2" src="./A SAILOR A COOK/Photography/_22_01911.jpg">
-                <img class="slides" id="slide3" src="./A SAILOR A COOK/Photography/_24_00497.jpg">
-                <img class="slides" id="slide4" src="./A SAILOR A COOK/Photography/_35_00508.jpg">
-                <img class="slides" id="slide5" src="./A SAILOR A COOK/Photography/__2_01892.jpg">
+                    <img class="slides" id="slide2" src="./assets/images/pasture-2.jpg">
+                    <img class="slides" id="slide1" src="./assets/images/beach.jpg">
+                    <img class="slides" id="slide3" src="./assets/images/pasture.jpg">
+                    <img class="slides" id="slide4" src="./assets/images/field.jpg">
+                    <img class="slides" id="slide5" src="./assets/images/junction.jpg">
 
                 </div>
 
                 <div id="gallery">
-                <img class="gallery-photos" id="photo1" src="./A SAILOR A COOK/Photography/_17_01906.jpg" onclick="enlarge(event, 'slide1')">
-                <img class="gallery-photos" id="photo2" src="./A SAILOR A COOK/Photography/_22_01911.jpg" onclick="enlarge(event, 'slide2')">
-                <img class="gallery-photos" id="photo3" src="./A SAILOR A COOK/Photography/_24_00497.jpg" onclick="enlarge(event, 'slide3')">
-                <img class="gallery-photos" id="photo4" src="./A SAILOR A COOK/Photography/_35_00508.jpg" onclick="enlarge(event, 'slide4')">
-                <img class="gallery-photos" id="photo5" src="./A SAILOR A COOK/Photography/__2_01892.jpg" onclick="enlarge(event, 'slide5')">
+                <img class="gallery-photos" id="photo1" src="./assets/images/pasture-2.jpg" onclick="enlarge(event, 'slide1')">
+                <img class="gallery-photos" id="photo2" src="./assets/images/beach.jpg" onclick="enlarge(event, 'slide2')">
+                <img class="gallery-photos" id="photo3" src="./assets/images/pasture.jpg" onclick="enlarge(event, 'slide3')">
+                <img class="gallery-photos" id="photo4" src="./assets/images/field.jpg" onclick="enlarge(event, 'slide4')">
+                <img class="gallery-photos" id="photo5" src="./assets/images/junction.jpg" onclick="enlarge(event, 'slide5')">
                 </div>      
                 </div>
             </div>
